--- a/demonstratives_model_simple/.gitignore
+++ b/demonstratives_model_simple/.gitignore
@@ -1,1 +1,5 @@
-/demonstratives_model_simple/meeting_saved_chat.txt
+/meeting_saved_chat.txt
+/Speaker_with_bug_1.py
+/Speaker_with_bug_1_MW.py
+/Speaker_with_bug_2.py
+/Speaker_with_bug_2_MW.py
