--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /demonstratives_model_simple/Speaker_with_bug_1_MW.py
 /demonstratives_model_simple/Speaker_with_bug_2.py
 /demonstratives_model_simple/Speaker_with_bug_2_MW.py
+/demonstratives_model_RSA/LiteralSpeaker_with_bug.py
+/demonstratives_model_RSA/PragmaticSpeaker_with_bug.py
+/demonstratives_model_RSA/PragmaticListener_with_bug.py
