--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /demonstratives_model_RSA/PragmaticListener_with_bug_2.py
 /demonstratives_model_RSA/PragmaticSpeaker_with_bug_1.py
 /demonstratives_model_RSA/PragmaticSpeaker_with_bug_2.py
+/demonstratives_model_RSA/check_calculations_for_equations.py
 .RData
 .Rhistory
 Getting started with PyMC3 - Work-through.ipynb
