--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /model_predictions
 /Plots
 /R_scripts
+/shell_scripts
 /demonstratives_model_simple/meeting_saved_chat.txt
 /demonstratives_model_simple/Speaker_with_bug_1.py
 /demonstratives_model_simple/Speaker_with_bug_1_MW.py
